--- a/pit_app/templates/results/experiment.html
+++ b/pit_app/templates/results/experiment.html
@@ -1,4 +1,4 @@
-{% extends "layoutTables.html" %}
+{% extends "layoutPlots.html" %}
 {% block content %}
   
 <div class="navbar-default sidebar" role="navigation">
@@ -43,6 +43,13 @@
               <label># Transcripts:</label> {{ summary.trnNum }}<br/>
               <label># Peptides:</label> {{ summary.pepNum }}
           	</div>
+
+            <!-- <div id="sequence"></div>
+            <div id="chart">
+              <div id="explanation" style="visibility: hidden;">
+                <span id="percentage"></span>
+              </div>
+            </div> -->
           </div>
       </div>
 
@@ -52,7 +59,7 @@
         </div>
         
         <div class="panel-body">
-            <table class="table table-striped table-bordered dataTable no-footer" >
+            <table id = "smplTable" class="table table-striped table-bordered dataTable no-footer" >
             <thead>
               <tr>
                 <th>Sample ID</th>
