--- a/pit_app/templates/results/tge.html
+++ b/pit_app/templates/results/tge.html
@@ -13,7 +13,6 @@
             </button>
           </span>
         </div>
-
       </li>
       <li><a href="#summary"><i class="fa fa-dashboard fa-fw"></i> Summary</a></li>
       <li><a href="#observations"><i class="fa fa-dashboard fa-fw"></i> TGE Observations</a></li>
@@ -25,116 +24,115 @@
       <li><a href="tables.html"><i class="fa fa-table fa-fw"></i>Expression Data Statistics </a></li>
     </ul>
     </div>
+  </div>
 
+  <div id="page-wrapper">
+    <div class="row">
+      <div class="col-lg-12">
+        <h1 class="page-header">{{ summary.tge.accession }}</h1>
+      </div>
     </div>
 
-    <div id="page-wrapper">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">{{ summary.tge.accession }}</h1>
+    <div class="row">
+      <div>
+        <div class="panel panel-default" id="summary">
+          <div class="panel-heading"><i class="fa fa-bar-chart-o fa-fw"></i> Summary</div>
+          
+          <div class="panel-body">
+            <div class="row" style="margin-left:5px">
+              <label>TGE ID:</label> {{ summary.tge.id }}</br>
+              <label>TGE Type(s):</label> {{ summary.tgeClasses|join(', ') }}</br>
+              <label>Uniprot ID(s):</label>
+              {% for uniprotID in summary.uniprotIDs %}
+                <a href="protein?uniprot={{ uniprotID }}" target="_blank">{{ uniprotID }}</a>{% if not loop.last %},{% endif %}
+              {% endfor %}</br>
+              <label>Organism(s):</label> 
+              {% for org in summary.organisms %}
+                <a href="organism?organism={{ org }}" target="_blank">{{ org }}</a>{% if not loop.last %},{% endif %}
+              {% endfor %}</br>
+              <label>Number of observations:</label> {{ summary.obsCount }}</br>
             </div>
-        </div>
-
-        <div class="row">
-            <div>
-                <div class="panel panel-default" id="summary">
-                    <div class="panel-heading">
-                        <i class="fa fa-bar-chart-o fa-fw"></i> Summary
-                    </div>
-                    
-                    <div class="panel-body">
-                        <div class="row" style="margin-left:5px">
-                            <label>TGE ID:</label> {{ summary.tge.id }}</br>
-                            <label>TGE Type:</label> {{ summary.tge.tge_class }}</br>
-                            <label>Uniprot ID:</label><a href="protein?uniprot={{ summary.tge.uniprot_id }}" target="_blank"> {{ summary.tge.uniprot_id }}</a></br>
-                            <label>#Observations:</label> {{ summary.obsCount }}</br>
-                            <label>Organisms:</label> 
-                            {% for org in summary.organisms %}
-                              <a href="organism?organism={{ org }}" target="_blank">{{ org }}</a>,
-                            {% endfor %}</br>
-                        </div>
-                        <!--div class="row">
-                            <div id="pie_organism" class="col-xs-6" style="height:350px;"></div>
-                            <div id="pie_sample"   class="col-xs-6 pull-right" style="height:350px;"></div>
-                        </div>-->
-                        <div id="sequence"></div>
-                        <div id="chart">
-                          <div id="explanation" style="visibility: hidden;">
-                            <span id="percentage"></span>
-                          </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="panel panel-default" id="observations">
-                    <div class="panel-heading">
-                        <i class="fa fa-bar-chart-o fa-fw"></i> TGE Observations
-                    </div>
-                    
-                    <div class="panel-body">
-                        <div class="wordwrap"><label>TGE Sequence:</label> <span id="tgeSeq" value={{ summary.tge.amino_seq }}>{{ summary.tge.amino_seq }}</span></div><br/><br/>
-
-                        <table class="table table-striped table-bordered dataTable no-footer clickable" id="tges" >
-                        <thead>
-                          <tr>
-                            <th>Obs</th>
-                            <th>Experiment</th>
-                            <th>Sample</th>
-                            <th>Organism</th>
-                            <th>Type&nbsp;/&nbsp;Strand</th>
-                            <th>Identified Peptides</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          {% for res in results %}
-                            <tr>
-                              <td>{{ res.observation }}</td>
-                              <td>{{ res.experiment }}</td>
-                              <td>{{ res.sample }}</td>
-                              <td>{{ res.organism }}</td>
-                              <td>{{ res.type }}&nbsp;({{ res.strand }})</td>
-                              <td class="wordwrap"><strong>Total: {{ res.peptide_num }}</strong><br/>{% for pep in res.peptides %}{{ pep }}, <br/>{% endfor %}</td>
-                            </tr>
-                          {% endfor %}
-                        </tbody>
-                      </table>
-                    </div>
-                </div>
-
-
-                <div class="panel panel-default" id="massspec_stats">
-                    <div class="panel-heading ">
-                        <i class="fa fa-bar-chart-o fa-fw"></i> Mass-Spectrometry Data Statistics
-                    </div>
-                    
-                    <div class="panel-body collapse in">
-                        <div class="row" style="margin-left:5px">
-                            <label>Average peptide coverage:</label> </br>
-                            <label>Average peptides per TGE:</label> {{ avgPeptNum }}</br>
-                            <label>Average PSM count per peptide:</label>  </br>
-                            <label>Score:</label>  </br>
-                            <label>Software:</label>  </br>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="panel panel-default" id="mass_statistics">
-                    <div class="panel-heading">
-                        <i class="fa fa-bar-chart-o fa-fw"></i> Mass-spectrometry Data Statistics
-                    </div>
-                    
-                    <div class="panel-body">
-                        <label>Average peptide coverage:</label> <br>
-                        <label>Average peptides per TGE:</label> <br/>
-                        <label>Average PSM count per peptide:</label> <br/>
-                        <label>Score:</label> <br/>
-                        <label>Software: </label>
-                        <div id="tester" style="width:700px;height:450px;"></div>
-                    </div>
-                </div>
             
+            <div id="sequence"></div>
+            <div id="chart">
+              <div id="explanation" style="visibility: hidden;">
+                <span id="percentage"></span>
+              </div>
             </div>
         </div>
+      </div>
+
+      <div class="panel panel-default" id="observations">
+        <div class="panel-heading">
+          <i class="fa fa-bar-chart-o fa-fw"></i> TGE Observations
+        </div>
+        
+        <div class="panel-body">
+          <label>TGE Sequence:</label>
+          <div class="wordwrap test"><span>{{ summary.tge.amino_seq }}</span></div><br/><br/>
+            <table class="table table-striped table-bordered dataTable no-footer clickable" id="tges" >
+            <thead>
+              <tr>
+                <th></th>
+                <th>Obs</th>
+                <th>Experiment</th>
+                <th>Sample</th>
+                <th>Organism</th>
+                <th>Type&nbsp;/&nbsp;Strand</th>
+                <th>Identified Peptides</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for res in results %}
+                <tr>
+                  <td>{{ res.peptide_num }}</td>
+                  <td>{{ res.observation }}</td>
+                  <td>{{ res.experiment }}</td>
+                  <td>{{ res.sample }}</td>
+                  <td>{{ res.organism }}</td>
+                  <td>{{ res.type }}&nbsp;({{ res.strand }})</td>
+                  <td class="wordwrap"><strong>Total: {{ res.peptide_num }}</strong><br/>{% for pep in res.peptides %}{{ pep }}, <br/>{% endfor %}</td>
+                </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+        </div>
+      </div>
+
+
+      <div class="panel panel-default" id="massspec_stats">
+        <div class="panel-heading ">
+          <i class="fa fa-bar-chart-o fa-fw"></i> Mass-Spectrometry Data Statistics
+        </div>
+          
+        <div class="panel-body collapse in">
+          <div class="row" style="margin-left:5px">
+            <label>Average peptide coverage:</label> </br>
+            <label>Average peptides per TGE:</label> {{ avgPeptNum }}</br>
+            <label>Average PSM count per peptide:</label>  </br>
+            <label>Score:</label>  </br>
+            <label>Software:</label>  </br>
+          </div>
+        </div>
+      </div>
+
+      <div class="panel panel-default" id="mass_statistics">
+        <div class="panel-heading">
+          <i class="fa fa-bar-chart-o fa-fw"></i> Mass-spectrometry Data Statistics
+        </div>
+        
+        <div class="panel-body">
+          <label>Average peptide coverage:</label> <br>
+          <label>Average peptides per TGE:</label> <br/>
+          <label>Average PSM count per peptide:</label> <br/>
+          <label>Score:</label> <br/>
+          <label>Software: </label>
+          <div id="tester" style="width:700px;height:450px;"></div>
+        </div>
+      </div>
+        
     </div>
+  </div>
+</div>
 
 {% endblock %}
