--- a/pit_app/templates/search/results.html
+++ b/pit_app/templates/search/results.html
@@ -1,10 +1,16 @@
-{% extends "layout.html" %}
+{% extends "layoutPlots.html" %}
 
 {% block content %}
 
 <div id="search-output">
   <input type="hidden" id="searchData" value={{ searchData }}>
   <input type="hidden" id="searchType" value={{ searchType }}>
+  <div id="sequence"></div>
+  <div id="chart">
+    <div id="explanation" style="visibility: hidden;">
+      <span id="percentage"></span>
+    </div>
+  </div>
   <p><h4>List of TGEs:</h4></p><br/>
 
   <table class="table table-striped table-bordered dataTable no-footer tgeTable" id="tgeSearch">
@@ -15,7 +21,7 @@
         <th>Uniprot ID</th>
         <th>Organisms</th>
         <th>#Observations</th>
-        <th>#Experiments</th>
+        <th>#Samples</th>
         <th>Length</th>
       </tr>
     </thead>
@@ -23,11 +29,11 @@
       {% for tge in tgeList %}
       	<tr>
       	  <td>{{ tge.accession }}</td>
-          <td>{{ tge.class }}</td>
-          <td>{{ tge.uniprotID }}</td>
-          <td>{% for org in tge.organisms %}{{ org.organism }}, {% endfor %}</td>
+          <td>{{ tge.tgeClasses|join(', ') }}</td>
+          <td>{{ tge.uniprotIDs|join(', ') }}</td>
+          <td>{{ tge.organisms|join(', ') }}</td>
           <td>{{ tge.obsNum }}</td>
-          <td>{{ tge.expNum }}</td>
+          <td>{{ tge.sampleNum }}</td>
           <td>{{ tge.length }}</td>
       	  <!--td class="wordwrap">{{ tge.amino_seq }}</td>-->
       	</tr>
