--- a/pit_app/templates/results/organism.html
+++ b/pit_app/templates/results/organism.html
@@ -61,20 +61,27 @@
           <div class="panel-body">
              <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#tgeModal"><i class="fa fa-download"></i>&nbsp;Download TGEs</button>
             <br/><br/>
-            <table class="table table-striped table-bordered dataTable no-footer tgeTable">
+            <table class="table table-striped table-bordered dataTable no-footer" id = "orgTable">
             <thead>
               <tr>
                 <th>TGE Accession</th>
-                <th>TGE Type</th>
-                <th>Protein Name</th>
+                <th>TGE Type(s)</th>
+                <th>Uniprot ID(s)</th>
               </tr>
             </thead>
             <tbody>
               {% for tge in tgeList %}
+                {% set uniprotIDs = tge.uniprotIDs.split(',') %}
                 <tr>
-                  <td>{{ tge.accession }}</td>
-                  <td>{{ tge.tgeClasses|join(', ') }}</td>
-                  <td>{{ tge.uniprotIDs|join(', ') }}</td>
+                  <td>
+                  <a href="tge?accession={{ tge.accession }}" target="_blank">{{ tge.accession }}</a>
+                  </td>
+                  <td>{{ tge.tgeClasses }}</td>
+                  <td>
+                  {% for uniprotID in uniprotIDs %}
+                    <a href="protein?uniprot={{ uniprotID }}" target="_blank">{{ uniprotID }}</a>{% if not loop.last %}, {% endif %}
+                    {% endfor %}
+                  </td>
                 </tr>
               {% endfor %}
             </tbody>
