--- a/pit_app/templates/search/results.html
+++ b/pit_app/templates/search/results.html
@@ -5,12 +5,12 @@
 <div id="page-wrap">
   <input type="hidden" id="searchData" value={{ searchData }}>
   <input type="hidden" id="searchType" value={{ searchType }}>
-  <p> Graph of TGE breakdown</p>
-  <div class="col-md-8 col-md-offset-3">
+  <span><p><h4>Graph of TGE breakdown</h4></p></span>
+  <div class="col-md-8 col-md-offset-3" style="min-height: 200px">
     <div id="sequence"></div>
     <div id="chart">
-      <div id="explanation" style="visibility: hidden;">
-        <span id="percentage"></span>
+      <div id="explanation">
+        <span id="percentage"><i class="fa fa-spinner fa-spin fa-3x fa-fw"></i><span class="sr-only">Loading...</span></span>
       </div>
     </div>
   </div>
@@ -22,9 +22,9 @@
       <thead>
         <tr>
           <th>Accession Number</th>
-          <th>TGE Type</th>
-          <th>Uniprot ID</th>
-          <th>Organisms</th>
+          <th>TGE Type(s)</th>
+          <th>Uniprot ID(s)</th>
+          <th>Organism(s)</th>
           <th>#Observations</th>
           <th>#Samples</th>
           <th>Length</th>
