--- a/pit_app/static/css/pitdb.css
+++ b/pit_app/static/css/pitdb.css
@@ -108,6 +108,7 @@
   background-color: #fff;
   padding-left: 50px;
   padding-right: 50px;
+  padding-top:20px;
 }
 
 .fade {
@@ -222,6 +223,10 @@ rect.disabled {
 
 
 /* sunburst */
+.sunburst {
+  min-height: 500px !important;
+}
+
 #sidebar {
   float: right;
   width: 100px;
@@ -244,6 +249,7 @@ rect.disabled {
 
 #chart {
   position: relative;
+  margin-bottom: 20px;
 }
 
 #chart path {
@@ -317,4 +323,48 @@ span._code_string {
 }
 ._tmp_span{
    
+}
+
+.sunburstInfo {
+  
+}
+.sunburstInfo p {
+  font-style: italic;
+  padding-top: 40px !important;
+  font-family: "Times New Roman", Times, serif;
+}
+
+.nav h5 {
+  padding-bottom: 10px;
+}
+
+.nav i {
+  margin-right: 10px;
+}
+
+
+.spinner {
+  display:    none;
+  position:   fixed;
+  z-index:    1050;
+  top:        0;
+  left:       0;
+  height:     100%;
+  width:      100%;
+  background: rgba( 255, 255, 255, .8 ) 
+              url('http://i.stack.imgur.com/FhHRx.gif') 
+              50% 50% 
+              no-repeat;
+}
+
+/* When the body has the loading class, we turn
+   the scrollbar off with overflow:hidden */
+.loading {
+  overflow: hidden;   
+}
+
+/* Anytime the body has the loading class, our
+   modal element will be visible */
+.loading .spinner {
+  display: block;
 }
