--- a/pit_app/templates/results/experiment.html
+++ b/pit_app/templates/results/experiment.html
@@ -4,80 +4,81 @@
 <div class="navbar-default sidebar" role="navigation">
   <div class="sidebar-nav navbar-collapse">
     <ul class="nav" id="side-menu">
-      <li class="sidebar-search">
-        <div class="input-group custom-search-form">
-          <input type="text" class="form-control" placeholder="Search...">
-          <span class="input-group-btn">
-            <button class="btn btn-default" type="button">
-              <i class="fa fa-search"></i>
-            </button>
-          </span>
-        </div>
-
-      </li>
-      <li><a href="#summary"><i class="fa fa-dashboard fa-fw"></i> Summary</a></li>
+      <li><h5>Navigation Panel</h5></li>
+      <li><a href="#expSummary"><i class="fa fa-comment-o fa-fw"></i> Summary</a></li>
+      <li><a href="#expGraph"><i class="fa fa-pie-chart fa-fw"></i> Graph</a></li>
+      <li><a href="#expBreakdown"><i class="fa fa-bars fa-fw"></i> Experiment breakdown</a></li>
     </ul>
+  </div>
+</div>
+
+<div id="page-wrapper">
+  <div class="row">
+    <div class="col-lg-12">
+      <h1 class="page-header">Experiment ID: {{ summary.id }}</h1>
     </div>
   </div>
 
-  <div id="page-wrapper">
-    <div class="row">
-      <div class="col-lg-12">
-        <h1 class="page-header">Experiment ID: {{ summary.id }}</h1>
+  <div class="row">
+  	<div class="panel panel-default" id="expSummary">
+      <div class="panel-heading">
+        <i class="fa fa-bar-chart-o fa-fw"></i> Summary
+      </div>
+      
+      <div class="panel-body">
+        <div class="row" style="margin-left:5px">
+          <label>Experiment Title:</label> {{ summary.title }}</br>
+          <label>Data submitted by the user:</label> {{ summary.user }}</br></br>
+          <h5>Number of instances for:</h5>
+          <label>TGEs:</label> {{ summary.tgeNum }}</br>
+          <label>Samples:</label> {{ summary.sampleNum }}</br>
+          <label>Transcripts:</label> {{ summary.trnNum }}<br/>
+          <label>Peptides:</label> {{ summary.pepNum }}
+      	</div>
       </div>
     </div>
 
-    <div class="row">
-      <div>
-      	<div class="panel panel-default" id="summary">
-          <div class="panel-heading">
-            <i class="fa fa-bar-chart-o fa-fw"></i> Summary
-          </div>
-          
-          <div class="panel-body">
-            <div class="row" style="margin-left:5px">
-              <label>Experiment Title:</label> {{ summary.title }}</br>
-              <label>Data submitted by the user:</label> {{ summary.user }}</br></br>
-              <label># TGEs:</label> {{ summary.tgeNum }}</br>
-              <label># Samples:</label> {{ summary.sampleNum }}</br>
-              <label># Transcripts:</label> {{ summary.trnNum }}<br/>
-              <label># Peptides:</label> {{ summary.pepNum }}
-          	</div>
-
-            <div id="sequence"></div>
-            <div id="chart">
-              <div id="explanation" style="visibility: hidden;">
-                <span id="percentage"></span>
-              </div>
-            </div>
-          </div>
+    <div id="expGraph" class="panel panel-default sunburst" style="position: relative !important;">
+      <div class="panel-heading">
+        <i class="fa fa-pie-chart fa-fw"></i> Graph
       </div>
+      
+      <span><p><h5 style="margin-left: 15px; padding-top: 10px">Graph of experiment breakdown</h5></p></span>
+      <div class="col-md-8 col-md-offset-2">
+        <div id="sequence"></div>
+        <div id="chart">
+          <div id="explanation">
+            <span id="percentage"><i class="fa fa-spinner fa-spin fa-3x fa-fw"></i><span class="sr-only">Loading...</span></span>
+          </div>
+        </div>
+      </div>
+      <div style="clear: both;"></div>
+    </div>
 
-      <div class="panel panel-default" id="observations">
-        <div class="panel-heading">
-            <i class="fa fa-bar-chart-o fa-fw"></i> Samples
-        </div>
-        
-        <div class="panel-body">
-            <table id = "smplTable" class="table table-striped table-bordered dataTable no-footer" >
-            <thead>
+    <div class="panel panel-default" id="expBreakdown">
+      <div class="panel-heading">
+          <i class="fa fa-bars fa-fw"></i> Experiment breakdown
+      </div>
+      
+      <div class="panel-body">
+          <table id = "smplTable" class="table table-striped table-bordered dataTable no-footer" >
+          <thead>
+            <tr>
+              <th>Sample ID</th>
+              <th>Sample Name</th>
+              <th>Instances of TGEs</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for sample in sampleList %}
               <tr>
-                <th>Sample ID</th>
-                <th>Sample Name</th>
-                <th># TGEs</th>
+                <td>{{ sample.id }}</td>
+                <td>{{ sample.name }}</td>
+                <td>{{ sample.tgeNum }}</td>
               </tr>
-            </thead>
-            <tbody>
-              {% for sample in sampleList %}
-                <tr>
-                  <td>{{ sample.id }}</td>
-                  <td>{{ sample.name }}</td>
-                  <td>{{ sample.tgeNum }}</td>
-                </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-        </div>
+            {% endfor %}
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
