--- a/pit_app/templates/search/form.html
+++ b/pit_app/templates/search/form.html
@@ -37,6 +37,10 @@
             <option>Uniprot ID</option>
           </optgroup>
           <option role="separator" class="divider"></li>
+          <optgroup label="Peptide">
+            <option>Peptide Sequence</option>
+          </optgroup>
+          <option role="separator" class="divider"></li>
           <optgroup label="Species">
             {% for org in organisms %}
               <option>{{ org.organism }}</option>
