--- a/pit_app/templates/search/form.html
+++ b/pit_app/templates/search/form.html
@@ -60,7 +60,7 @@
       </div>
 
       <br/><br/>
-      <button id="submitSearch" type="submit" class="btn btn-primary">Submit <span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+      <button id="submitSearch" type="submit" class="btn btn-primary">Submit <i class="fa fa-search" aria-hidden="true"></i></button>
     </form>
   </div>
 </div>
