--- a/pit_app/templates/search/form.html
+++ b/pit_app/templates/search/form.html
@@ -42,9 +42,10 @@
           </optgroup>
           <option role="separator" class="divider"></li>
           <optgroup label="Species">
-            {% for org in organisms %}
-              <option>{{ org.organism }}</option>
-            {% endfor %}
+            <option>Homo sapiens</option>
+            <option>Aedes aegypti</option>
+            <option>Mus musculus</option>
+            <option>Pteropus alecto</option>
           </optgroup>
         </select>
       </div>
