New front figure

--- a/pit_app/templates/home/index.html
+++ b/pit_app/templates/home/index.html
@@ -19,7 +19,6 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#about">About</a></li>
                 <li><a href="/search">Search</a></li>
-                <li><a href="/signin">Login</a></li>
             </ul>
         </div>
     </div>
@@ -46,10 +45,24 @@
     <div class="container" id="about">
         <div class="row">
             <div>
-                <h2 class="section-heading">ABOUT PIT-DB</h2>
+                <h2 class="section-heading">About PIT-DB</h2>
                 <hr class="section-heading-spacer">
                 <div class="clearfix"></div>
-                <p class="lead">PIT-DB is a publicly available database for the storage and sharing of results from PIT (Proteomics Informed by Transcriptomics experiments. PIT involves the analysis of a given sample by both RNA-seq and proteomic mass spectrometry followed by integration of the acquired data to provide an unprecedented level of information about which genomic elements are being transcribed and translated within a given sample, even if the organism under study does not have an annotated genome.  </p>
+                <p class="lead">PIT-DB is a publicly available database for sharing of results from PIT (proteomics informed by transcriptomics) experiments. PIT [1] involves the analysis of a given sample by both RNA-seq and proteomic mass spectrometry followed by integration of the acquired data to provide an unprecedented level of information about which genomic elements are being transcribed and translated within a given sample, even if the organism under study does not have an annotated genome. Observed translated genomic elements (TGEs) are BLASTed against reference proteomes using a published workflow [2] to determine whether they are known proteins, protein variants or novel gene products. </p>
+                <hr class="section-heading-spacer">
+                <div class="clearfix"></div>
+            </div>
+            <div>
+                <h2 class="section-heading">Acknowledgements</h2>
+                <hr class="section-heading-spacer">
+                <div class="clearfix"></div>
+                <p class="lead">Developed by Elena Chatzimichali and Shyamasree Saha under the supervision of Conrad Bessant (Queen Mary University of London) and David Matthews (University of Bristol). Funded by BBSRC (grants BB/M020118/1 and BB/K016075/1) and Queen Mary University of London.
+                <ol>
+                <li>
+                Evans, V.C., et al., De novo derivation of proteomes from transcriptomes for transcript and protein identification. Nature Methods, 2012. 9(12): p. 1207-U111.</li>
+                <li>Fan, J., et al., Galaxy Integrated Omics: Web-based Standards-Compliant Workflows for Proteomics Informed by Transcriptomics. Mol Cell Proteomics, 2015. 14(11): p. 3087-93.</li>
+                </ol>
+                </p>
                 <hr class="section-heading-spacer">
                 <div class="clearfix"></div>
             </div>
