--- a/pit_app/templates/error/404.html
+++ b/pit_app/templates/error/404.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
-
 {% block content %}
-  <h1>File Not Found</h1>
-  <p><a href="{{ url_for('home.index') }}">Back</a></p>
+<div class="container">
+  <div id="page-wrap">
+	  <h4 style="font-weight: bold; color: #c12e2a">The search term you tried did not match any entry in the database. Please try a different term.</h4>
+	</div>
+</div>
 {% endblock %}
